--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,4 @@
 
-#nextpage{
-    display: flex;
-    width: 100%;
-    margin-top: 50%;
-    justify-content: center;
-    align-items: center;
-    ;
-}
-
 /*horizontal nav bar that hovers*/
 #nav{
     position: fixed;
@@ -15,11 +6,37 @@
     left: 0;
     width: 100%;
     height: 50px;
-    background-color: #000;
+    background-color: #FFF8F3;
     display: flex;
     justify-content: space-around;
     align-items: center;
     z-index: 1;
+}
+
+/*description box in the center of the page*/
+#description {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 50%;
+    background-color: #FFF8F3;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .page {
@@ -30,3 +47,20 @@
     background: #E8A77B;
 }
 
+h1 {
+    font-size: 3em;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    color: #000;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 1.5em;
+}
