--- a/timerstyles.css
+++ b/timerstyles.css
@@ -1,23 +1,22 @@
 #background {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 1080px;
     width: 100%;
 
 }
 
-
 #timer-row-1 {
     display: flex;
+    flex-flow: row;
     width: 100%;
     height: 50%;
-    flex-flow: row wrap;
     background: #FFADF8;
 }
 
 #timer-row-2 {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row;
     width: 100%;
     height: 50%;
     background: #FFBBBA;
@@ -25,16 +24,29 @@
 
 #timer-col-1 {
     display: flex;
+    margin: 10px;
     width: 100%;
-    height: 50%;
+    height: 100%;
     flex-flow: column wrap;
     background: #E89EBF;
 }
 
 #timer-col-2 {
     display: flex;
+    margin: 10px;
     width: 100%;
-    height: 50%;
+    height: 100%;
     flex-flow: column wrap;
     background: #FFC7AD;
+}
+
+#time-inputs {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+}
+
+#timer-nums {
+    display: flex;
+    flex-direction: row;
 }
