--- a/pulse.css
+++ b/pulse.css
@@ -4,19 +4,19 @@ body {
     align-items: center;
     flex-direction: column;
     margin: 0px;
-    height:1080px;
+    height: 1080px;
 }
 
-.top{
+.top {
     align-items: center;
-    flex-direction:row;
+    flex-direction: row;
     justify-content: center;
-    height:33%;
+    height: 33%;
     width: 100%;
 }
 
-.bottom{
-    height:77%;
+.bottom {
+    height: 77%;
     width: 100%;
 }
 
@@ -43,6 +43,7 @@ body {
 
 .circle {
     position: absolute;
+    background-color: orange;
     z-index: 100;
     color: yellow;
     height: 25px;
