--- a/pulse.css
+++ b/pulse.css
@@ -1,5 +1,6 @@
 body {
-    background-color: thistle;
+    font-family: Helvetica;
+    background-color: #FFE9E6;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -16,37 +17,74 @@ body {
 }
 
 .bottom {
+    display: flex;
+
     height: 77%;
     width: 100%;
 }
 
 .pulse {
-    position: relative;
-    background-color: blue;
-    height: 400px;
-    width: 400px;
+    background-color: #FFA599;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .skip {
-    background-color: green;
+    background-color: #807473;
     height: 33%;
     width: 100%;
 }
 
 .calm {
-    background-color: yellow;
+    background-color: #AAA899;
     height: 33%;
     width: 100%;
 }
 
-.circle {
+#circle {
     position: absolute;
-    background-color: orange;
-    z-index: 100;
-    color: yellow;
+    background-color: deepskyblue;
+    height: 25px;
+    opacity: 0.5;
+    width: 25px;
+    border-radius: 50%;
+    margin-top: 22%;
+}
+
+#circlePulse {
+    position: absolute;
+    background-color: deepskyblue;
     height: 25px;
     width: 25px;
     border-radius: 50%;
+    margin-top: 22%;
+    
+    animation: scaleIn 3s infinite cubic-bezier(.36,.11,.89,.32);
+    animation: scaleInIn 3s infinite alternate cubic-bezier(.36,.11,.89,.32);
 }
+
+@keyframes scaleInIn {
+    from {
+        transform: scale(2.5,2.5);
+        opacity: 0.1
+    }
+    to {
+        transform: scale(1, 1);
+        opacity: .5;
+    }
+}
+
+@keyframes scaleIn {
+    from {
+        transform: scale(1,1);
+        opacity: 0.5
+    }
+    to {
+        transform: scale(2.5, 2.5);
+        opacity: 0.1;
+    }
+}
+
