--- a/timerstyles.css
+++ b/timerstyles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #background {
     display: flex;
     flex-direction: column;
@@ -49,4 +53,11 @@
 #timer-nums {
     display: flex;
     flex-direction: row;
+    color: white;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#hours {
+    display: none;
 }
