--- a/pulse.css
+++ b/pulse.css
@@ -1,3 +1,8 @@
+a {
+    text-decoration: none;
+    color: black;
+}
+
 body {
     font-family: Helvetica;
     background-color: #FFE9E6;
@@ -18,7 +23,9 @@ body {
 
 .bottom {
     display: flex;
-
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
     height: 77%;
     width: 100%;
 }
@@ -39,6 +46,8 @@ body {
 }
 
 .calm {
+    display: flex;
+    justify-content: center;
     background-color: #AAA899;
     height: 33%;
     width: 100%;
