--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,21 @@
 
+body{
+    height: 100vh;
+}
 /*horizontal nav bar that hovers*/
 #nav{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 70px;
     background-color: #fff;
     display: flex;
     justify-content: space-around;
     align-items: center;
     z-index: 1;
+    padding-left: 0%;
 }
-
 
 
 
@@ -23,6 +26,8 @@ ul {
     align-items: center;
     width: 100%;
     height: 100%;
+    padding-inline-start: 0%;
+    margin: 0%;
 }
 
 .index {
@@ -60,17 +65,11 @@ a {
 
 
 #logo{
-    position: fixed;
-width: 147px;
-height: 38px;
-left: 67px;
-top: 10px;
 
 font-family: 'SF Pro';
-font-style: bold;
 font-weight: 510;
-font-size: 38px;
-line-height: 38px;
+font-size: 30px;
+line-height: 30px;
 
 display: flex;
 flex-direction: row;
@@ -79,15 +78,31 @@ color: #3D3D3D;
 }
 
 #circle{
-    width: 38px;
-    height: 38px;
+    width: 35px;
+    height: 35px;
     border-radius: 100%;
     background-color:  #FF9074;
     display: flex;
 flex-direction: row;}
 
 #welcomescreen{
-    width: 100px;
-    height: 100px;
-    background-color: #000;
+    display:flex;
+    width: 100%;
+    height: 100%;
+    background-color: #f8b5a4;}
+
+    p{
+        font-family: 'SF Pro';
+        font-weight: 300;
+        font-size: 20px;
+        line-height: 30px;
+        color: #3D3D3D;
+        text-align: center;
+        margin-top: 70px;
+        padding: 0;
+    }
+
+body{
+    margin: 0;
+    padding: 0;
 }
