--- a/timerstyles.css
+++ b/timerstyles.css
@@ -62,3 +62,92 @@ body {
 #hours {
     display: none;
 }
+
+body {
+    height: 100vh;
+}
+
+/*horizontal nav bar that hovers*/
+#nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1;
+    padding-left: 0%;
+}
+
+
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-inline-start: 0%;
+    margin: 0%;
+}
+
+.index {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #F5F5F5;
+    flex-direction: column;
+}
+
+.pulse {
+    background: #E8A77B;
+
+}
+
+h1 {
+    font-size: 3em;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    color: #000;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 1.5em;
+}
+
+
+#logo {
+
+    font-family: 'SF Pro';
+    font-weight: 510;
+    font-size: 30px;
+    line-height: 30px;
+
+    display: flex;
+    flex-direction: row;
+
+    color: #3D3D3D;
+}
+
+#circle {
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    background-color: #FF9074;
+    display: flex;
+    flex-direction: row;
+}
+
+#soundcloud {}
