--- a/pulse.css
+++ b/pulse.css
@@ -1,8 +1,12 @@
 a {
     text-decoration: none;
-    color: black;
+    color: #000;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 1.5em;
     margin: 1em;
 }
+
 
 body {
     font-family: Helvetica;
@@ -56,7 +60,7 @@ body {
     width: 100%;
 }
 
-#circle {
+#centerCircle {
     position: fixed;
     background-color: #FF7777;
     height: 25px;
@@ -98,3 +102,44 @@ body {
     }
 }
 
+#nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    z-index: 1;
+    padding-left: 0%;
+}
+
+
+
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#logo{
+    font-family: 'SF Pro';
+    font-weight: 510;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 30px; 
+
+    color: #3D3D3D;
+}
+
+#circle{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color:  #FF9074;
+}
