--- a/styles.css
+++ b/styles.css
@@ -89,17 +89,28 @@ flex-direction: row;}
     display:flex;
     width: 100%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
     background-color: #f8b5a4;}
 
     p{
         font-family: 'SF Pro';
-        font-weight: 300;
         font-size: 20px;
         line-height: 30px;
         color: #3D3D3D;
         text-align: center;
-        margin-top: 70px;
+        margin-top: 20px;
         padding: 0;
+    }
+
+    #welcomebox{
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        height: 50%;
+        background-color: white;
+        border-radius: 20px;
+        justify-content: center;
     }
 
 body{
