--- a/timerstyles.css
+++ b/timerstyles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
 }
 
 #background {
@@ -43,15 +43,26 @@ body {
     width: 100%;
     height: 100%;
     flex-flow: column;
+    align-items: center;
+    justify-content: center;
     background: #FFC7AD;
 }
 
 #timer-nums {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     color: white;
+    width: 100%;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#buttons {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+
 }
 
 #mins-input {
@@ -82,6 +93,11 @@ body {
     padding-left: 0%;
 }
 
+p {
+    font-family: Helvetica, sans-serif;
+    color: white;
+    font-size: 30px;
+}
 
 ul {
     list-style: none;
@@ -148,6 +164,16 @@ a {
     background-color: #FF9074;
     display: flex;
     flex-direction: row;
+}
+
+#timeinputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#focus-disp {
+    text-align: center;
 }
 
 #soundcloud {}
